<resources>
    <string name="app_name">""</string>
    <string name="bash">BASH</string>
    <string name="psyString">PSY</string>
    <string name="itemString">ITEM</string>
    <string name="runString">RUN</string>
    <string name="restartString">Retry?</string>
    <string name="nextString">Next!</string>
    <string name="chadJuice">""</string>
    <string name="chadJuiceRevealed">Chad Juice</string>
    <string name="enemyHP">HP: 50/50</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enemy"> Appeared!</string>
    <string name="flavorzText">Gohan Appeared!</string>
    <string name="atkText">""</string>
    <string name="defText">""</string>
    <string name="hpText">""</string>
    <string name="magText">""</string>
    <string name="enemyInfo">The enemy took 0 damage!</string>
    <string name="playerInfo">The player took 0 damage!</string>


</resources>
