<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/playerHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="231dp"
        android:layout_marginBottom="82dp"
        android:fontFamily="@font/press_start_2p"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/enemyHP"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/bashButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/bash"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/psyButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/psyString"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/itemButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/itemString"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/runButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/runString"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="190dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="82dp"
        android:enabled="false"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/chadJuice"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <ImageView
        android:id="@+id/enemySprite"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="212dp"
        android:clickable="true"
        android:scaleType="centerInside"
        android:scaleX="3"
        android:scaleY="3"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:srcCompat="@drawable/gohan1" />

    <TextView
        android:id="@+id/FlavorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_dark"
        android:fontFamily="@font/press_start_2p"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/flavorzText"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/devButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="devCheat"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/attackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/atkText"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/defenseText"
        app:layout_constraintStart_toEndOf="@+id/enemySprite"
        app:layout_constraintTop_toBottomOf="@+id/healthText" />

    <TextView
        android:id="@+id/magicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="230dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/magText"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintStart_toEndOf="@+id/enemySprite"
        app:layout_constraintTop_toBottomOf="@+id/defenseText" />

    <TextView
        android:id="@+id/healthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/hpText"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/attackText"
        app:layout_constraintStart_toEndOf="@+id/enemySprite"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/defenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/defText"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/magicText"
        app:layout_constraintStart_toEndOf="@+id/enemySprite"
        app:layout_constraintTop_toBottomOf="@+id/attackText" />

    <TextView
        android:id="@+id/enemyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/enemyInfo"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/enemySprite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/playerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="128dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/playerInfo"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemySprite" />

    <Button
        android:id="@+id/akechiButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="415dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/press_start_2p"
        android:scaleX="1"
        android:text="?"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>